# pluto

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
artifacts/: README.md  napoleon.pkl  offline_selection_artifact.pkl
docs/: README.md  ollama_setup.md
notebooks/: pluto_tutorial.ipynb  ucb_tutorial.ipynb
scripts/: cluster.py  clustering_demo.py  embedding_study.py  eval_comparison.py  online_eval.py  overall_analysis.py  questions.py  single_question_analysis.py  test_predictor.py  test_selector.py
src/pluto/: __init__.py
src/pluto/clustering/: __init__.py  cluster_predictor.py  clusters.py  embeders.py  viz.py
src/pluto/eval/: __init__.py  datasets.py  evaluators.py  experiment.py  viz.py
src/pluto/pipelines/: online_pipeline.py  training_pipeline.py
src/pluto/rag/: __init__.py  config.py  llm_loader.py  rag.py  rag_interface.py  utils.py
src/pluto/rl/: __init__.py  rl.py
src/pluto/selection/: __init__.py  config_predictor.py  config_selector.py  selection_pipeline.py
tests/: conftest.py  test_clustering.py  test_config.py  test_datasets.py  test_evaluators.py  test_experiment.py  test_llm_load.py  test_llm_loader.py  test_rag.py  test_rag_components.py  test_rag_interface.py  test_rl.py  test_selection.py  test_selection_pipeline.py  test_viz.py
