[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pluto-mab"
version = "0.1.1"
description = "RAG hyperparameter optimisation via Multi-Armed Bandits and question clustering"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Jorge Ibinarriaga", email = "jorge.ibi.robles@gmail.com" },
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "multi-armed-bandit",
    "ucb",
    "hyperparameter-optimisation",
    "llm",
    "question-clustering",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "langchain-text-splitters>=0.2.0",
    "langchain-groq>=0.1.5",
    "sentence-transformers>=2.6.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "huggingface-hub>=0.23.0",
    "chromadb>=0.5.3",
    "langchain-chroma>=0.1.4",
    "datasets>=4.4.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/Ibinarriaga8/pluto"
Repository = "https://github.com/Ibinarriaga8/pluto"
Changelog = "https://github.com/Ibinarriaga8/pluto/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Ibinarriaga8/pluto/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.4.0", "build>=1.0.0", "twine>=5.0.0"]

[project.scripts]
pluto-train = "pluto.pipelines.training_pipeline:main"
pluto-ask   = "pluto.pipelines.online_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long – handled by formatter
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["pluto"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
